--- a/domain-model/build.gradle
+++ b/domain-model/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'java'
 }
 
-version 'unspecified'
+group 'com.example'
+version '0.0.1-SNAPSHOT'
+sourceCompatibility = '8'
 
 repositories {
     mavenCentral()
