--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,7 +4,6 @@ plugins {
 
 group 'com.example'
 version '0.0.1-SNAPSHOT'
-sourceCompatibility = '8'
 
 repositories {
     mavenCentral()
@@ -15,7 +14,7 @@ dependencies {
     implementation project(':ports:output-ports')
     implementation project(':ports:input-ports')
 
-    implementation 'javax.inject:javax.inject:1'
+    implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
