--- a/infrastructure/jpa-adapter/src/main/resources/application-dev.yml
+++ b/infrastructure/jpa-adapter/src/main/resources/application-dev.yml
@@ -2,11 +2,8 @@ spring:
   datasource:
     url: jdbc:h2:file:./build/h2db/db/products;DB_CLOSE_DELAY=-1
     driverClassName: org.h2.Driver
-    initialization-mode: always
-    platform: h2
     username: sa
     password:
-    continue-on-error: true
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
@@ -19,4 +16,7 @@ spring:
   h2:
     console:
       enabled: true
+  sql.init.continue-on-error: true
+  sql.init.mode: always
+  sql.init.platform: h2
 
